--- a/style/style.css
+++ b/style/style.css
@@ -61,7 +61,7 @@ flex-flow:column;
     width: 40vw;
     height: 40vw;
     background: url("https://raw.githubusercontent.com/ShrianshGoel/software/main/style/logo.png");
-    background-size: contain;
+    background-size: cover;
     opacity: 0;
     filter: drop-shadow(-10px -10px 10px rgb(16, 17, 18));
     animation-name:appear;
